force-app/main/default/objects/Property_District360__c/Property_District360__c.object-meta.xml
<CustomObject>
    <description>Each Property within the District has it&apos;s own record containing all static and relevant details (square footage, address, year built, etc.). The related property owners, assessments, and tenant businesses will all be connected to the property for a 360 degree view of the District&apos;s ecosystem.</description>
    <label>Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>