force-app/main/default/objects/Property_District360__c/fields/Amenities_Description_District360__c.field-meta.xml
<CustomField>
    <fullName>Amenities_Description_District360__c</fullName>
    <label>Amenities Description</label>
    <type>TextArea</type>
</CustomField>