force-app/main/default/objects/Property_District360__c/fields/Amenities_District360__c.field-meta.xml
<CustomField>
    <fullName>Amenities_District360__c</fullName>
    <label>Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elevator in building</fullName>
                <label>Elevator in Building</label>
            </value>
            <value>
                <fullName>Parking spot</fullName>
                <label>Parking Spot</label>
            </value>
            <value>
                <fullName>Pets welcome</fullName>
                <label>Pets Welcome</label>
            </value>
            <value>
                <fullName>Washer/Dryer in unit</fullName>
                <label>Washer/Dryer in Unit</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>