force-app/main/default/objects/Property_District360__c/fields/Description_District360__c.field-meta.xml
<CustomField>
    <fullName>Description_District360__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>