force-app/main/default/objects/Property_District360__c/fields/Latitude_District360__c.field-meta.xml
<CustomField>
    <fullName>Latitude_District360__c</fullName>
    <label>Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>