force-app/main/default/objects/Property_District360__c/fields/Longitude_District360__c.field-meta.xml
<CustomField>
    <fullName>Longitude_District360__c</fullName>
    <label>Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>