force-app/main/default/objects/Property_District360__c/fields/No_of_Bedrooms_District360__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bedrooms_District360__c</fullName>
    <label>No of Bedrooms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Bedroom</fullName>
            </value>
            <value>
                <fullName>2 Bedrooms</fullName>
            </value>
            <value>
                <fullName>3 Bedrooms</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>