force-app/main/default/objects/Property_District360__c/fields/No_of_Floors_District360__c.field-meta.xml
<CustomField>
    <fullName>No_of_Floors_District360__c</fullName>
    <label>No of Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>