force-app/main/default/objects/Property_District360__c/fields/No_of_Units_District360__c.field-meta.xml
<CustomField>
    <fullName>No_of_Units_District360__c</fullName>
    <label>No of Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>