force-app/main/default/objects/Property_District360__c/fields/Parent_Property_District360__c.field-meta.xml
<CustomField>
    <fullName>Parent_Property_District360__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Property</label>
    <referenceTo>Parent_Property_District360__c</referenceTo>
    <relationshipLabel>Child Properties</relationshipLabel>
    <relationshipName>Properties_District360</relationshipName>
    <type>Lookup</type>
</CustomField>