force-app/main/default/objects/Property_District360__c/fields/Property_Class_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_Class_District360__c</fullName>
    <label>Property Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>