force-app/main/default/objects/Property_District360__c/fields/Property_Image_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_Image_District360__c</fullName>
    <label>Property Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>