force-app/main/default/objects/Property_District360__c/fields/Property_State_Province_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_State_Province_District360__c</fullName>
    <label>Property State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>