force-app/main/default/objects/Property_District360__c/fields/Property_Status_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_Status_District360__c</fullName>
    <label>Property Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
                <label>In-Development</label>
            </value>
            <value>
                <fullName>Partially Occupied</fullName>
            </value>
            <value>
                <fullName>Occupied</fullName>
                <label>Fully Occupied</label>
            </value>
            <value>
                <fullName>Vacant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>