force-app/main/default/objects/Property_District360__c/fields/Property_Street_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_Street_District360__c</fullName>
    <label>Property Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>