force-app/main/default/objects/Property_District360__c/fields/Property_Type_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_Type_District360__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Multi-Use</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>