force-app/main/default/objects/Property_District360__c/fields/Property_Zip_Postal_Code_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Postal_Code_District360__c</fullName>
    <label>Property Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>