force-app/main/default/objects/Property_District360__c/fields/Rentable_Building_Area_District360__c.field-meta.xml
<CustomField>
    <fullName>Rentable_Building_Area_District360__c</fullName>
    <label>Rentable Building Area (Sq.Ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>