force-app/main/default/objects/Property_District360__c/fields/Sq_Ft_used_for_Commercial_District360__c.field-meta.xml
<CustomField>
    <fullName>Sq_Ft_used_for_Commercial_District360__c</fullName>
    <label>Sq.Ft used for Commercial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>