force-app/main/default/objects/Property_District360__c/fields/Total_Sq_Ft_Leased_District360__c.field-meta.xml
<CustomField>
    <fullName>Total_Sq_Ft_Leased_District360__c</fullName>
    <label>Total Square Footage Leased</label>
    <summarizedField>Tenants_District360__c.Total_Sq_Ft_Occupied_District360__c</summarizedField>
    <summaryForeignKey>Tenants_District360__c.Property_District360__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>