force-app/main/default/objects/Property_District360__c/fields/Year_Built_District360__c.field-meta.xml
<CustomField>
    <fullName>Year_Built_District360__c</fullName>
    <label>Year Built</label>
    <type>Date</type>
</CustomField>