force-app/main/default/objects/Property_District360__c/fields/Year_Renovated_District360__c.field-meta.xml
<CustomField>
    <fullName>Year_Renovated_District360__c</fullName>
    <label>Year Renovated</label>
    <type>Date</type>
</CustomField>