force-app/main/default/objects/Property_District360__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_Type_District360__c</columns>
    <columns>Property_Class_District360__c</columns>
    <columns>Property_Status_District360__c</columns>
    <columns>Zone_District360__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Properties</label>
</ListView>