force-app/main/default/objects/Property_District360__c/listViews/Properties_By_Status.listView-meta.xml
<ListView>
    <fullName>Properties_By_Status</fullName>
    <columns>NAME</columns>
    <columns>Property_Status_District360__c</columns>
    <columns>Total_Square_Footage_District360__c</columns>
    <columns>Property_State_Province_District360__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Property_Status_District360__c</field>
        <operation>equals</operation>
        <value>Occupied,Development,Partially Occupied,Vacant</value>
    </filters>
    <label>Properties By Status</label>
</ListView>