force-app/main/default/objects/Property_District360__c/listViews/Properties_By_Type.listView-meta.xml
<ListView>
    <fullName>Properties_By_Type</fullName>
    <columns>NAME</columns>
    <columns>Property_Type_District360__c</columns>
    <columns>Total_Square_Footage_District360__c</columns>
    <columns>Property_State_Province_District360__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Property_Type_District360__c</field>
        <operation>equals</operation>
        <value>Commercial,Multi-Use,Parking,Residential</value>
    </filters>
    <label>Properties By Type</label>
</ListView>